Sync all content

--- a/content/resources/11-954s05.md
+++ b/content/resources/11-954s05.md
@@ -6,6 +6,8 @@ description: The Harvard/MIT Cooperative Society is a cooperative that was found
 file: /courses/11-954-community-owned-enterprise-and-civic-participation-spring-2005/91fe0dcb812ac63d8a563147a3379e8a_11-954s05.jpg
 file_size: 165644
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: The Harvard/MIT Cooperative Society is a cooperative that was founded by
     students in 1882 to provide merchandise to the community at competitive prices.
